# Vetra

./: .editorconfig  .eslintrc.json  .gitignore  APPLIED_IMPROVEMENTS.md  BUILD_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVNET_QUICKREF.md  DEVNET_SETUP.md  FINAL_STATUS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TEST_DEVNET_GUIDE.md  VETRA_Gemini_Local.ipynb  VETRA_Gemini_Local_pt.ipynb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  setup.ps1  test-devnet-transaction.html  test-server.js  test-simple.html  tsconfig.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  repository-settings.yml  template-repository.yml
backend/: .env.example  .eslintrc.js  .gitignore  .railwayignore  BACKEND_COMPLETE_GUIDE.md  Dockerfile  Dockerfile.prod  Procfile  RAILWAY_DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  jest.config.js  knexfile.js  nginx.conf  nginx.prod.conf  nixpacks.toml  package-lock.json  package.json  railway.json  sonar-project.properties
backend/programs/attestation/: Cargo.toml
backend/programs/attestation/src/: errors.rs  lib.rs
backend/programs/attestation/src/instructions/: create_attestation.rs  mod.rs  stake_reputation.rs  vote_attestation.rs  withdraw_stake.rs
backend/programs/attestation/src/state/: attestation.rs  mod.rs  provider.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MAS_MOCK_VS_REAL.md  TRANSACTION_FLOW_DIAGRAM.md  TROUBLESHOOTING_TRANSACTIONS.md
frontend/: README.md  tsconfig.json
scripts/: setup.js
(+148 files in other folders)
