[package]
name = "attestation"
version = "0.1.0"
description = "Vetra Attestation Program - On-chain attestations for Solana transaction risk assessment"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "attestation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "~1.17.0"
solana-sdk = "~1.17.0"

